# mcp-repo-onboarding

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  GEMINI.md  LICENSE  ONBOARDING.md  README.md  RELEASE_0_2_0.md  coverage.xml  gemini-extension.json  main.py  pyproject.toml  token_usage.txt
.gemini/: B-prompt.txt  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
benchmarks/: benchmark_large_repo.py
docs/design/: AGENT_ARCHITECTURE_DESIGN.md  AGENT_SCHEMA.md  EXTRACT_OUTPUT_RULES.md  GITHUB_ISSUES_AGENT_ARCHITECTURE.md  SOFTWARE_DESIGN_GUIDE.md  STATIC_ANALYSIS_EXTRACTION_METHODS.md  TEST_DESIGN_AGENT_ARCHITECTURE.md  ignore-handling.md
docs/development/: CONTRIBUTING.md  DEPENDENCIES.md  DEV Phase 6.md  DEV Phase 7.md  DEV Phase 8.md  DEV_Phase_10.md  DEV_Phase_9.md  PR_DESCRIPTION.md  REQUIREMENTS.md  gap_analysis_from_senior_leads_feedback.md  gap_analysis_report.md  github_issues.md  plan.md
docs/evaluation/: A-prompt.txt  B-prompt.txt  B-promtp.txt  SCRIPT_GUIDE.md  phase5-ab-prompts.md  run_headless_evaluation.sh  run_specific_repos.sh  setup_evaluation_repos.sh  teardown_and_clone_repos.sh  validate_onboarding.py
docs/legacy/: B-prompt.txt  phase5-ab-prompts.md  phase5-ab-results-template.md
docs/legacy/testing_results_ab/DeepCode/: B.md
docs/legacy/testing_results_ab/Paper2Code/: B.md
docs/legacy/testing_results_ab/imgix-python/: B.md
docs/legacy/testing_results_ab/searxng/: A.md
docs/test/DeepCode/: A.md  B.md
docs/test/Paper2Code/: A.md  B.md
docs/test/imgix-python/: A.md  B.md
docs/test/searxng/: A.md  B.md
docs/usaage/: role-aware-usage.md
notes/: local-artifacts.md
scripts/: create_issues.sh  eval_assertions.sh  eval_repos.list  run_headless_evaluation.sh  run_specific_repos.sh  setup_evaluation_repos.sh  summarize_logs.py  teardown_and_clone_repos.sh  validate_onboarding.py  validate_onboarding_list.sh
src/mcp_repo_onboarding/: __init__.py  analysis.py  config.py  describers.py  effective_config.py  mcp_prompt.md  mcp_prompt.txt  onboarding.py  resources.py  schema.py  server.py
src/mcp_repo_onboarding/analysis/: __init__.py  catalog.py  core.py  extractors.py  frameworks.py  install_commands.py  notebook_hygiene.py  onboarding_blueprint.py  onboarding_blueprint_legacy.py  onboarding_blueprint_reference.py  onboarding_blueprint_v2.py  prioritization.py  scanning.py  structs.py  tooling.py  utils.py
src/mcp_repo_onboarding/analysis/onboarding_blueprint_engine/: __init__.py  compile.py  context.py  registry.py  specs.py
tests/: conftest.py  test_analysis.py  test_config_classification.py  test_describers.py  test_doc_filtering.py  test_edge_cases.py  test_error_handling.py  test_fixture_exclusion.py  test_frameworks_from_pyproject.py  test_frameworks_poetry_pyproject.py  test_ignore_integration.py  test_ignore_matcher.py  test_install_command_descriptions.py  test_logging.py  test_makefile_command_descriptions.py  test_mcp_prompt.py  test_metadata_descriptions.py  test_notebook_detection.py  test_onboarding.py  test_onboarding_blueprint.py  test_onboarding_blueprint_v2.py  test_onboarding_validator.py  test_prioritization_complexity_guard.py  test_prioritization_registry_parity.py  test_prompt_blueprint_v2_renderer.py  test_pyproject_parsing.py  test_self_analysis.py  test_server_errors.py  test_server_features.py  test_symlink_security.py  test_type_hints.py  test_version_classification.py  test_version_pinning.py
tests/analysis/: test_describers.py  test_determinism.py  test_dotfile_handling.py  test_effective_config.py  test_error_handling.py  test_frameworks_poetry_pyproject.py  test_frameworks_requirements.py  test_nodejs_detection.py  test_notebook_hygiene.py  test_type_hints.py
tests/analysis/core/: test_analysis.py  test_analysis_limits.py  test_edge_cases.py  test_node_commands_gating.py  test_primary_tooling.py  test_self_analysis.py
tests/analysis/extractors/: test_node_package_json_commands.py  test_pyproject_parsing.py  test_version_pinning.py
tests/analysis/frameworks/: test_frameworks_poetry_pyproject.py
tests/analysis/onboarding/: test_unknown_primary_scope_note.py
tests/analysis/tooling/: test_nodejs_detection.py  test_tooling_detection.py
tests/fixtures/: test_makefile_command_descriptions.py
tests/fixtures/excessive-docs-configs/: Makefile
tests/fixtures/excessive-docs-configs/configs/: config_1.txt  config_10.txt  config_11.txt  config_12.txt  config_13.txt  config_14.txt  config_15.txt  config_16.txt  config_17.txt  config_18.txt  config_19.txt  config_2.txt  config_20.txt  config_3.txt  config_4.txt  config_5.txt  config_6.txt  config_7.txt  config_8.txt  config_9.txt
tests/fixtures/fixture-exclusion-test/: pyproject.toml
tests/fixtures/fw-poetry-flask/: pyproject.toml
tests/fixtures/imgix-python-config-priority/: .pre-commit-config.yaml  Makefile  setup.py  tox.ini
tests/fixtures/imgix-python-tox-lint/: setup.py  tox.ini
tests/fixtures/makefile-with-recipes/: Makefile
tests/fixtures/phase3-2-tox-nox-make/: Makefile  noxfile.py  pyproject.toml  tox.ini
tests/fixtures/pyproject-rich/: pyproject.toml
tests/fixtures/python-pin-range/: pyproject.toml
tests/fixtures/setuptools-only-no-install/: README.md  setup.py
tests/fixtures/version-ranges/: pyproject.toml
tests/integration/: test_ignore_integration.py  test_merge_install_integration.py
tests/onboarding/: test_blueprint_engine_equivalence.py  test_env_setup_node_primary_no_venv.py  test_no_venv_when_python_not_detected.py  test_notebook_dirs_truncation.py  test_onboarding_blueprint.py  test_onboarding_blueprint_canonical_module.py  test_onboarding_blueprint_v2.py  test_onboarding_validator.py  test_other_tooling_normalization.py  test_primary_tooling_note.py  test_prompt_blueprint_v2_renderer.py  test_python_only_scope_message.py  test_registry_suppression.py  test_unknown_env_setup_neutral_message.py
tests/server/: test_mcp_prompt.py  test_server_features.py
(+149 files in other folders)
