[project]
name = "mcp-repo-onboarding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.25.0,<2.0.0",
    "packaging>=25.0,<26.0",
    "pathspec>=0.12.1,<1.0.0",
    "pydantic>=2.12.5,<3.0.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_repo_onboarding"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mcp_repo_onboarding/mcp_prompt.txt",
]

[project.scripts]
mcp-repo-onboarding = "mcp_repo_onboarding.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "ruff>=0.14.10,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "pip-audit>=2.8.0,<3.0.0",
]

[tool.pytest.ini_options]
addopts = "--ignore=tests/fixtures"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "N815",   # mixedCase variable in class scope (Pydantic models use camelCase for API)
    "SIM102", # Nested if statements (intentional for readability with comments)
    "B904",   # raise from within except (intentional for cleaner error messages)
    "E721",   # Type comparison using == (needed for runtime type checking in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
