[project]
name = "mcp-repo-onboarding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.25.0,<2.0.0",
    "packaging>=25.0,<26.0",
    "pathspec>=0.12.1,<2.0.0",
    "pydantic>=2.12.5,<3.0.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_repo_onboarding"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mcp_repo_onboarding/mcp_prompt.txt",
    "gemini-extension.json",
]

[project.scripts]
mcp-repo-onboarding = "mcp_repo_onboarding.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "ruff>=0.14.10,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "pip-audit>=2.8.0,<3.0.0",
]

[tool.pytest.ini_options]
addopts = "--ignore=tests/fixtures"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/site-packages/*",
    "src/mcp_repo_onboarding/analysis/onboarding_blueprint_legacy.py",
    "src/mcp_repo_onboarding/analysis/onboarding_blueprint_v2.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PL",     # pylint (includes too-many-branches, too-many-statements)
    "C90",    # mccabe complexity
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "N815",   # mixedCase variable in class scope (Pydantic models use camelCase for API)
    "SIM102", # Nested if statements (intentional for readability with comments)
    "B904",   # raise from within except (intentional for cleaner error messages)
    "E721",   # Type comparison using == (needed for runtime type checking in tests)
]

[tool.ruff.lint.pylint]
max-branches = 12
max-statements = 60

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLC0415", "PLR2004"]  # Allow assert, late imports, magic numbers in tests
"tests/fixtures/*" = ["S101", "PLC0415", "PLR2004"]  # Read-only test fixtures
"scripts/*" = ["PLR0912", "PLR0915", "C901"]  # Validator script has legitimate complex logic
"src/mcp_repo_onboarding/analysis/core.py" = ["PLW2901", "PLR0912", "C901"]  # f_path normalization, categorization logic
"src/mcp_repo_onboarding/analysis/extractors.py" = ["PLR2004", "PLW2901", "C901", "PLR0912"]  # Magic numbers, loop vars, makefile parsing
"src/mcp_repo_onboarding/analysis/frameworks.py" = ["PLR0912", "C901"]  # Framework detection has multiple branches
"src/mcp_repo_onboarding/analysis/install_commands.py" = ["PLR2004", "PLR0911", "C901"]  # Magic numbers, returns, command descriptions
"src/mcp_repo_onboarding/analysis/onboarding_blueprint.py" = ["C901", "PLR0912"]  # Environment and notes rendering
"src/mcp_repo_onboarding/analysis/prioritization.py" = ["PLR2004", "PLR1714"]  # Score constants and comparisons
"src/mcp_repo_onboarding/analysis/scanning.py" = ["C901", "PLR0912"]  # File scanning and filtering logic
"src/mcp_repo_onboarding/analysis/structs.py" = ["PLR5501"]  # else-if indentation

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
